Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52646

QSpotLight and QPointLight API inconsistency

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.7.0 RC
    • 5.7.0 Beta
    • Qt3D
    • None
    • d5b665cb40c25ff8ddb5ad7ebe74e04dd91c045b

    Description

      Both QSpotLight and QPointLight have the same three attenuation values, but the API to access them is different. QPointLight has three separate float properties, one for each attenuation value. QSpotLight has a single QVector3D property to set all attenuation values at once.

      The APIs should be consistent.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rbrock Robert Brock
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes