QSpotLight API inconsistency addressed

The access of attenuation values for both
QSpotLight and QPointLight were different.
This has now been addressed and QSpotLight
works like QPointLight.

Change-Id: I79c64e0a58c234326a7c6b01e15c49034586769a
Task-number: QTBUG-52646
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@theqtcompany.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>